--- a/RestaurantManager/views/restaurants/search.html
+++ b/RestaurantManager/views/restaurants/search.html
@@ -2,7 +2,7 @@
 	<div class="freeSearchForm">
 		<form class="form-inline" data-ng-submit="freeSearch(searchWords)">
 			<div class="form-group has-feedback">
-				<input class="form-control" id="searchWords" data-ng-model="searchWords" />
+				<input class="form-control" id="searchWords" data-ng-model="searchWords" placeholder="Search for restaurants" />
 				<i class="glyphicon glyphicon-search form-control-feedback"></i>
 			</div>
 		</form>   
