--- a/RestaurantManager/views/restaurants/create.html
+++ b/RestaurantManager/views/restaurants/create.html
@@ -76,5 +76,9 @@
 			</div>
 		</div>
 		<button type="submit" data-ng-click="submit()" data-ng-disabled="restForm.$invalid" class="btn btn-success pull-right">Submit</button>
+
+	</div>
+	<div class="createLoading" data-ng-if="restData.loading">
+		<div></div>
 	</div>
 </form>
